Changed db_create and db_populate to create data.db

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         {% block content %} {% endblock %}
         <br></br>
         {% block footer %}
-            &copy; Ryan Aday, Jared Asch, Imad Belkebir (Team TL;DR)
+            &copy; Ryan Aday, Theodore Peters (Team TL;DR)
         {% endblock %}
     </body>
 </html>
