trying to fix home backend

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
         {% block content %} {% endblock %}
         <br></br>
         {% block footer %}
-            &copy; Ryan Aday, Theodore Peters (Team TL;DR)
+            &copy; Ryan Aday, Theodore Peters, Jiajie Mai (Team Holy-bible-2-Tokyo-Drift-2-Electric-Boogaloo)
         {% endblock %}
     </body>
 </html>
