--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8"/>
+        <!-- CDN --->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <title> {% block title %}{% endblock %} | Website</title>
     </head>
     <body>
+
+
+
         <a href = "{{ url_for("home") }}">Home</a>
         {% if current_user %}
             <a href = "{{ url_for('profile', username = current_user) }}">Profile</a>
