--- a/templates/login.html
+++ b/templates/login.html
@@ -10,10 +10,20 @@
     {% for each in msgs %}
         {{ each }}
         <br/><br/>
-    {% endfor %}
-    <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="Username"> <br/><br/>
-        <input type="password" name="password" placeholder="Password"> <br/><br/>
-        <input type="submit" name="submit">
-    </form>
+	{% endfor %}
+	<div>
+	  <form action="/login" method="POST">
+            <input type="text" name="username" placeholder="Username"> <br/><br/>
+            <input type="password" name="password" placeholder="Password"> <br/><br/>
+            <input type="submitLogin" name="submit">
+	  </form>
+	</div>
+	<div>
+	  <form method="POST">
+            <input type="text" name="username" placeholder="Username"> <br/><br/>
+            <input type="password" name="password" placeholder="Password"> <br/><br/>
+            <input type="submitSignIn" name="submit">
+	  </form>
+	</div>
+	    
 {% endblock %}
