--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,8 +15,9 @@
 	  <form action="/login" method="POST">
             <input type="text" name="username" placeholder="Username"> <br/><br/>
             <input type="password" name="password" placeholder="Password"> <br/><br/>
-            <input type="submit" name="submitLogin">
+            <input type="submit" name="submitSignUp">
 	  </form>
 	</div>
+
 
 {% endblock %}
