ham sandwich why ARE THERE ALWASY ERRORS IN APP.PY I WANT TO TEAST THINGS

--- a/templates/battle.html
+++ b/templates/battle.html
@@ -12,7 +12,19 @@
 
 <div id="edosh"></div>
 <div id="round"></div>
-<ul  id="stock"></ul >
+<ul  id="stock">
+  <li id="stoc1">
+    <div class="card">
+      <img id="stoc1buy" class="card-img-top" src="buy.png"/>
+      <div id="stoc1nam" class="card-title">TITLE</div>
+      <div id="stoc1sel" class="card-img-bottom" src="sell.png"/>
+    </div>
+  </li>
+
+
+
+
+</ul >
 <div id="pdosh"></div>
 
 {% endblock %}
