--- a/templates/battle.html
+++ b/templates/battle.html
@@ -14,10 +14,12 @@
 <div id="round"></div>
 <ul  id="stock">
   <li id="stoc1">
-    <div class="card">
-      <img id="stoc1buy" class="card-img-top" src="buy.png"/>
-      <div id="stoc1nam" class="card-title">TITLE</div>
-      <div id="stoc1sel" class="card-img-bottom" src="sell.png"/>
+    <div class="card" style="width:18rem;">
+      <img id="stoc1buy" class="card-img" src="static/buy.png" style="width:18rem;"/>
+      <div class="card-body">
+	   <div id="stoc1nam" class="card-title">TITLE</div>
+      </div>
+      <img id="stoc1sel" class="card-img" src="static/sell.png" style="width:18rem;"/>
     </div>
   </li>
 
