--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
 
 
 
-        <a href = "{{ url_for("home") }}">Home</a>
+        <a href = "{{ url_for('home') }}">Home</a>
         {% if current_user %}
             <a href = "{{ url_for('profile', username = current_user) }}">Profile</a>
             <a href = "{{ url_for('logout') }}">Logout</a>
