--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
         <br/><br/>
 	{% endfor %}
 	<div>
-	  <form action="/login" method="POST">
+	  <form action="/signup" method="POST">
             <input type="text" name="username" placeholder="Username"> <br/><br/>
             <input type="password" name="password" placeholder="Password"> <br/><br/>
             <input type="submit" name="submitSignUp">
