--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,24 @@
 body {
-    background-color: white
+    background-color: white;
+    color: black;
 }
-.homebody{
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #2a2a2a;
+}
+li {
+  float: left;
+}
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+div.centerbody{
     text-align:center;
 }
