--- a/templates/base.html
+++ b/templates/base.html
@@ -5,20 +5,23 @@
         <meta charset="utf-8"/>
         <!-- CDN --->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link rel="stylesheet" href="../static/style.css">
 	{% block xtralinks %}{% endblock %}
     </head>
     <body>
 
 
-
-        <a href = "{{ url_for('home') }}">Home</a>
+      <ul>
+        <li><a href = "{{ url_for('home') }}">Home</a></li>
         {% if current_user %}
-            <a href = "{{ url_for('profile', username = current_user) }}">Profile</a>
-            <a href = "{{ url_for('logout') }}">Logout</a>
+        <li><a href = "{{ url_for('profile', username = current_user) }}">Profile</a></li>
+        <li><a href = "{{ url_for('logout') }}">Logout</a></li>
         {% else %}
-            <a href = "{{ url_for('login') }}">Login</a>
-            <a href = "{{ url_for('signup') }}">Signup</a>
+        <li><a href = "{{ url_for('login') }}">Login</a></li>
+        <li><a href = "{{ url_for('signup') }}">Signup</a></li>
         {% endif %}
+      </ul>
+	    
 
         {% block content %} {% endblock %}
         <br></br>
