--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+<div class="centerbody">
     <h1> {{title}} </h1>
     {% set msgs = get_flashed_messages() %}
     {% for each in msgs %}
@@ -18,6 +19,7 @@
             <input type="submit" name="submitSignUp">
 	  </form>
 	</div>
+</div>
 
 
 {% endblock %}
