--- a/templates/battle.html
+++ b/templates/battle.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block xtralinks %}
-<script src="battle.js"></script>
+<script src="{{ url_for('static',filename='find.js') }}"></script>
 {% endblock %}
 
 {% block title %}
