i probably shouldn't be commiting to multi.db every time but uh WHATEEEEEEEVER

--- a/templates/find.html
+++ b/templates/find.html
@@ -5,8 +5,8 @@
 	<script src="{{ url_for('static',filename='find.js') }}">
 	</script>
   </head>
-  <body>
-	<img src="{{ url_for('static',filename='match.png') }}"/>
-	<strong id="dotdotdiv" style="text-align:center;">Finding Match</strong>
+  <body style="font-family:'Helvetica Neue', Helvetica, Arial, sans-serif;text-align:center;">
+	<img src="{{ url_for('static',filename='match.png') }}" width="350px"/><br>
+	<div id="dotdotdiv" style="text-align:left;width:200px;left:45%;position:absolute;font-weight:bold;">Finding Match</div>
   </body>
 </html>
