--- a/templates/home.html
+++ b/templates/home.html
@@ -3,17 +3,15 @@
 {% block title %} Business Doggo {% endblock %}
 {% block content %}
 <div class="centerbody">
-  <h1> Welcome to our game, "Dog Eat Dog!" </h1>
+  <h1><strong>The Wolf of Woof Street</strong></h1>
   <br>
-  Here, you will be able to play as a dog trading stocks to become the best business doggo and achieve that victory royale.
+  Business is a dog eat dog world. Do you have what it takes to survive?
   <br>
   <br>
-  1. You will be presented with 5 stocks.
+  <strong>Fight</strong> other dogs in perilous stock-trading battles
   <br>
-  2. Sell or buy, but be careful on what you buy as you have limited money.
+  Achieve <strong>Victory Royale</strong> through your investment skills
   <br>
-  3. After each round, the stocks will be calculated and you will be given money accordingly.
-  <br>
-  4. VICTORY ROYAL after they lose all their money or whoever has more money after 10 rounds.
-</div>
+  <strong>Eat</strong> the pathetic loser's corpse
+  </ul>
 {% endblock %}
