--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,8 @@
         <li><a href = "{{ url_for('home') }}">Home</a></li>
         {% if current_user %}
         <li><a href = "{{ url_for('profile', username = current_user) }}">Profile</a></li>
-        <li><a href = "{{ url_for('logout') }}">Logout</a></li>
+		<li><a href = "{{ url_for('find') }}">Find Match</a></li>
+		<li><a href = "{{ url_for('logout') }}">Logout</a></li>
         {% else %}
         <li><a href = "{{ url_for('login') }}">Login</a></li>
         <li><a href = "{{ url_for('signup') }}">Signup</a></li>
@@ -26,7 +27,7 @@
         {% block content %} {% endblock %}
         <br></br>
         {% block footer %}
-        &copy; Holy bible 2: Tokyo Drift 2: Electric Boogaloo (come_to_computer interaction_club.txt)
+        <div class="footer">&copy; Holy bible 2: Tokyo Drift 2: Electric Boogaloo (come_to_computer_interaction_club.txt)</div>
         {% endblock %}
     </body>
 </html>
