--- a/templates/userinf.html
+++ b/templates/userinf.html
@@ -6,5 +6,6 @@
   <li>{{stock.name}}: {{stock.number}} </li>
   {% endfor %}
 </ol>
-Money: {{ money }}
+
+<p>Dogbloons In TThe Bank: {{ money }}</p>
 {% endblock %}
