Still working on change password system

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
   <br>
   <strong>Fight</strong> other dogs in perilous stock-trading battles
   <br>
-  Achieve <strong>Victory Royale</strong> through your investment skills
+  Achieve a <strong>Victory Royale</strong> through your investment skills
   <br>
   <strong>Eat</strong> the pathetic loser's corpse
   </ul>
