--- a/templates/userinf.html
+++ b/templates/userinf.html
@@ -1,11 +1,15 @@
 {% extends "base.html" %}
 
 {% block content %}
+<p>Username: {{ user }} </p>
+
 <ol>
   {% for stock in stocks %}
   <li>{{stock.name}}: {{stock.number}} </li>
   {% endfor %}
 </ol>
 
-<p>Dogbloons In TThe Bank: {{ money }}</p>
+<p>Dogbloons In The Bank: {{ money }}</p>
+<a href = "{{ url_for('change_password') }}">Change Your Password</a>
+
 {% endblock %}
