--- a/templates/battle.html
+++ b/templates/battle.html
@@ -1,35 +1,53 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html>
+  <head>
+	<title>Battle</title>
+    <meta charset="utf-8"/>
+    <!-- CDN --->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<script src="{{ url_for('static',filename='battle.js') }}"></script>
+  </head>
+  <body>
+	<div class="container">
+		 <div class="row">
+		   <div class="col-2">
+			 <img src="http://pethealthnetwork.com/sites/default/files/content/images/your-dogs-nose-accurate-indicator-his-overall-health-2-492151771.jpg" style="object-fit:cover;width:100px;height:100px;">
+		   </div>
+		   <div class="col-6">
+			 <h3><strong>Playing Against: </strong><span id="e"></span></h3>
+			 <h3 style="color:#3AB578;">$<span id="edosh"></span></h3>
+		   </div>
+		 </div>
+	</div>
+	<h2 style="text-align:center;"><span id="round"></span> Rounds Left</h2>
 
-{% block xtralinks %}
-<script src="{{ url_for('static',filename='battle.js') }}"></script>
-{% endblock %}
-
-{% block title %}
-Epic Battle
-{% endblock %}
-
-{% block content %}
-<div style="align:center;text-align:center;">
-  <div id="e"></div>
-  <div id="edosh"></div>
-  <div id="round"></div>
-
-  <ul  id="stock" style="color:#000000;">
-	{% for i in range(5) %}
-	<li>
-      <div class="card" style="width:250px;">
-		<img id="stoc{{ i + 1 }}buy" class="card-img" src="{{ url_for('static',filename='buy.png') }}" style="width:250px;"/>
-		<div class="card-body" style="height:100px;">
-		  <div id="stoc{{ i + 1 }}sym" class="card-title" style="font-weight:bold;"></div>
-		  <div id="stoc{{ i + 1 }}nam" class="card-text"></div>
+	<div class="container">
+	  <div class="row no-gutters">
+		{% for i in range(5) %}
+		<div class="col-sm">
+		  <div class="card">
+			<img id="stoc{{ i + 1 }}buy" class="card-img" src="{{ url_for('static',filename='buy.png') }}"/>
+			<div class="card-body" style="height:150px;text-align:center;">
+			  <h1 id="stoc{{ i + 1 }}sym" class="card-title" style="font-weight:bold;"></h1>
+			  <div id="stoc{{ i + 1 }}nam" class="card-text"></div>
+			</div>
+			<img id="stoc{{ i + 1 }}sel" class="card-img" src="{{ url_for('static',filename='sell.png') }}"/>
+		  </div>
 		</div>
-		<img id="stoc{{ i + 1 }}sel" class="card-img" src="{{ url_for('static',filename='sell.png') }}" style="width:250px;"/>
-      </div>
-	</li>
-	{% endfor %}
-  </ul >
-
-  <div id="p"></div>
-  <div id="pdosh"></div>
-</div>
-{% endblock %}
+		{% endfor %}
+	  </div>
+	</div>
+	<hr>
+	<div class="container">
+	  <div class="row">
+		<div class="col-2">
+		  <img src="http://pethealthnetwork.com/sites/default/files/content/images/your-dogs-nose-accurate-indicator-his-overall-health-2-492151771.jpg" style="object-fit:cover;width:100px;height:100px;">
+		</div>
+		<div class="col-6">
+		  <h3><strong>Me: </strong><span id="p"></span></h3>
+		  <h3 style="color:#3AB578;">$<span id="pdosh"></span></h3>
+		</div>
+	  </div>
+	</div>
+  </body>
+</html>
