--- a/templates/battle.html
+++ b/templates/battle.html
@@ -11,7 +11,7 @@
 	<div class="container">
 		 <div class="row">
 		   <div class="col-2">
-			 <img src="http://pethealthnetwork.com/sites/default/files/content/images/your-dogs-nose-accurate-indicator-his-overall-health-2-492151771.jpg" style="object-fit:cover;width:100px;height:100px;">
+			 <img src="{{ doggo1 }}" style="object-fit:cover;width:100px;height:100px;">
 		   </div>
 		   <div class="col-6">
 			 <h3><strong>Playing Against: </strong><span id="e"></span></h3>
@@ -41,7 +41,7 @@
 	<div class="container">
 	  <div class="row">
 		<div class="col-2">
-		  <img src="http://pethealthnetwork.com/sites/default/files/content/images/your-dogs-nose-accurate-indicator-his-overall-health-2-492151771.jpg" style="object-fit:cover;width:100px;height:100px;">
+		  <img src="{{ doggo2 }}" style="object-fit:cover;width:100px;height:100px;">
 		</div>
 		<div class="col-6">
 		  <h3><strong>Me: </strong><span id="p"></span></h3>
