Fixed the change password change

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -7,13 +7,9 @@
 {% block content %}
 <div class="centerbody">
   <h1> {{title}} </h1>
-  {% set msgs = get_flashed_messages() %}
-  {% for each in msgs %}
-  {{ each }}
-  <br/><br/>
-  {% endfor %}
   <div>
     <form action="/change_password" method="POST">
+      <input type="password" name="oldpass" placeholder="Old Password"> <br/><br/>
       <input type="password" name="newpass" placeholder="New Password"> <br/><br/>
       <input type="password" name="confpass" placeholder="Confirm Password"> <br/><br/>
       <input type="submit" name="submitNewPass">
