--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,11 @@
 {% block content %}
 <div class="centerbody">
   <h1> {{title}} </h1>
+  {% set msgs = get_flashed_messages() %}
+  {% for each in msgs %}
+      {{ each }}
+      <br/><br/>
+{% endfor %}
   <div>
     <form action="/login" method="POST">
       <input type="text" name="username" placeholder="Username"> <br/><br/>
