--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/151542-200.png">
     <title> {% block title %}{% endblock %}</title>
     <meta charset="utf-8"/>
     <!-- CDN --->
